src/test/ui/for/for-loop-unconstrained-element-type.stderr
error[E0282]: type annotations needed
  --> $DIR/for-loop-unconstrained-element-type.rs:8:14
   |
LL |     for i in Vec::new() { }
   |              ^^^^^^^^^^
   |              |
   |              cannot infer type
   |              the element type for this iterator is not specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
